# flutter_bt_plugin

./: .gitignore  README.md  ffigen.yaml  flutter_rust_bridge.yaml  frb_generated.h  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/flutter_bt_plugin_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
ios/: flutter_bt_plugin.podspec
ios/Classes/: flutter_bt_plugin.c
lib/: flutter_bt_plugin.dart  flutter_bt_plugin_bindings_generated.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  libs.dart
lib/src/rust/api/: bt_api.dart  bt_api.freezed.dart  simple.dart
lib/src/rust/libs/: app.dart
macos/: flutter_bt_plugin.podspec
rust/: Cargo.toml
rust/src/: frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs  lib.rs
rust/src/api/: bt_api.rs  mod.rs  simple.rs
rust/src/libs/: app.rs  mod.rs
src/: CMakeLists.txt  flutter_bt_plugin.c
